Greatly improved the UX of the signup -> connection -> recommendations flow
